--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 <body>
 
   <header class="header">
-    <div class="container">
-      <section class="intro">
+    <section class="intro">
+      <div class="container">
         <h1 class="intro__title">Отступы в вёрстке: margin и padding</h1>
 
         <p class="intro__text">В этой статье я рассмотрю самые популярные "стандартные" решения для сохранения смысла и хорошей читаемости вашего кода. Если точнее — речь пойдет об основных правилах организации отступов. Они сильно влияют на общую функциональность кода и, если всё сделано верно, позволяют легко вносить изменения в любую его часть. При этом другие части кода продолжат нормально работать.</p>
         <p class="intro__text">Как это часто бывает, знание базовых принципов поможет проявить гибкость и выйти за их пределы. Эти знания особенно важны для начинающих, но также будут полезным напоминанием и для более опытных верстальщиков. Итак, поговорим о фундаментальных основах работы с отступами в вёрстке.</p>
-      </section>
-    </div>
+      </div>
+    </section>
 
     <nav class="header__nav menu">
-      <div class="container menu__container">
+      <div class="container container_colored">
         <h2 class="menu__heading">Содержание:</h2>
 
         <ol class="menu__list">
@@ -43,8 +43,8 @@
   </header>
 
   <main>
-    <div class="container">
-      <section class="order" id="order">
+    <section class="order" id="order">
+      <div class="container">
         <h2 class="order__heading heading">Отступ задается от предыдущего элемента к следующему: от первого ко второму, сверху вниз, слева направо.</h2>
         <div class="order__content">
           <img class="order__img order__img_left" src="img/page/order-01.jpg" alt="" height="415">
@@ -64,73 +64,81 @@
             <p class="order__text text">Изначально элемент статичен, а его положение может меняться только под воздействием свойств других блоков или свойств родителя.</p>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
+
 
       <section class="dom" id="dom">
-        <h2 class="dom__heading heading">Отступ задается последнему возможному элементу в DOM-дереве</h2>
+        <div class="container">
+          <h2 class="dom__heading heading">Отступ задается последнему возможному элементу в DOM-дереве</h2>
 
-        <p class="dom__text text">Вообще, margin задают исключительно между соседними элементами DOM-дерева. Для примера, посмотрите на этот список:</p>
-        <img class="dom__img img_centered" src="img/page/dom-01.jpg" alt="" height="537">
-        <img class="dom__img img_centered" src="img/page/dom-02.jpg" alt="" height="450">
+          <p class="dom__text text">Вообще, margin задают исключительно между соседними элементами DOM-дерева. Для примера, посмотрите на этот список:</p>
+          <img class="dom__img img_centered" src="img/page/dom-01.jpg" alt="" height="537">
+          <img class="dom__img img_centered" src="img/page/dom-02.jpg" alt="" height="450">
 
-        <p class="dom__text text">Отступ делают за счёт соседних элементов, а не дочерних:</p>
-        <div class="dom_bordered">
-          <img class="dom__img img_centered" src="img/page/dom-03.jpg" alt="" height="427">
-          <p class="dom__text text"><strong>ВАЖНО:</strong> здесь <i>.list-item</i> — последний возможный элемент в котором мы задаём отступ, чтобы разделить списки.</p>
+          <p class="dom__text text">Отступ делают за счёт соседних элементов, а не дочерних:</p>
+          <div class="dom_bordered">
+            <img class="dom__img img_centered" src="img/page/dom-03.jpg" alt="" height="427">
+            <p class="dom__text text"><strong>ВАЖНО:</strong> здесь <i>.list-item</i> — последний возможный элемент в котором мы задаём отступ, чтобы разделить списки.</p>
+          </div>
+
+          <p class="dom__text text">Казалось бы, можно задать отступ параграфу <i>&lt;p&gt;</i>, либо обёртке <i>&lt;article&gt;</i> для достижения той же цели. Внешне останется все точно также, но так делать не рекомендуется.</p>
+          <p class="dom__text text">Предыдущий пример был достаточно простым, но бывает вложенность значительно больше.</p>
+          <img class="dom__img img_centered" src="img/page/dom-04.jpg" alt="" height="164">
+          <p class="dom__text text">В случае с заголовком, если ему необходим отступ сверху, последним элементом будет <i>section</i>. Именно для него задается <i>padding-top</i>, а не <i>div</i> с классом <i>container</i>. Свойства <i>margin</i>, которые стоят по умолчанию необходимо обнулить.</p>
+          <img class="dom__img img_centered" src="img/page/dom-05.jpg" alt="" height="504">
+          <p class="dom__text text">Это необходимо для более простого поиска отступов в будущем — для вас или того, кто будет верстать после вас. Кроме того, возможны серьёзные проблемы при динамическом дублировании или выводе вёрстки с нестандартной структурой отступов.</p>
+
         </div>
-
-        <p class="dom__text text">Казалось бы, можно задать отступ параграфу <i>&lt;p&gt;</i>, либо обёртке <i>&lt;article&gt;</i> для достижения той же цели. Внешне останется все точно также, но так делать не рекомендуется.</p>
-        <p class="dom__text text">Предыдущий пример был достаточно простым, но бывает вложенность значительно больше.</p>
-        <img class="dom__img img_centered" src="img/page/dom-04.jpg" alt="" height="164">
-        <p class="dom__text text">В случае с заголовком, если ему необходим отступ сверху, последним элементом будет <i>section</i>. Именно для него задается <i>padding-top</i>, а не <i>div</i> с классом <i>container</i>. Свойства <i>margin</i>, которые стоят по умолчанию необходимо обнулить.</p>
-        <img class="dom__img img_centered" src="img/page/dom-05.jpg" alt="" height="504">
-        <p class="dom__text text">Это необходимо для более простого поиска отступов в будущем — для вас или того, кто будет верстать после вас. Кроме того, возможны серьёзные проблемы при динамическом дублировании или выводе вёрстки с нестандартной структурой отступов.</p>
       </section>
 
       <section class="null" id="null">
-        <h2 class="null__heading heading">Для последнего элемента группы отступ всегда обнуляется</h2>
+        <div class="container">
+          <h2 class="null__heading heading">Для последнего элемента группы отступ всегда обнуляется</h2>
 
-        <p class="null__text text">Для наглядности возьмём наш предыдущий пример с рецептами</p>
-        <p class="null__text text">Между рецептами расстояние одинаковое. Можно заметить, что и до следующего блока расстояние такое же.</p>
+          <p class="null__text text">Для наглядности возьмём наш предыдущий пример с рецептами</p>
+          <p class="null__text text">Между рецептами расстояние одинаковое. Можно заметить, что и до следующего блока расстояние такое же.</p>
 
-        <img class="null__img img_centered" src="img/page/null-01.jpg" alt="" height="600">
+          <img class="null__img img_centered" src="img/page/null-01.jpg" alt="" height="600">
 
-        <p class="null__text text">В соответствии со вторым принципом: последний <i>margin</i> обнуляется, а нижний отступ задаётся через <i>padding</i> для <i>section</i>. Я чаще всего задаю <i>padding</i> для секции с обоих сторон, если расстояние между секциями 100px задаю секциям <i>padding-top:50px</i> и <i>padding-bottom:50px</i>.</p>
+          <p class="null__text text">В соответствии со вторым принципом: последний <i>margin</i> обнуляется, а нижний отступ задаётся через <i>padding</i> для <i>section</i>. Я чаще всего задаю <i>padding</i> для секции с обоих сторон, если расстояние между секциями 100px задаю секциям <i>padding-top:50px</i> и <i>padding-bottom:50px</i>.</p>
 
-        <img class="null__img img_centered" src="img/page/null-02.jpg" alt="" height="607">
-        <img class="null__img img_centered" src="img/page/null-03.jpg" alt="" height="528" style="margin-bottom: 0;">
-        <img class="null__img img_centered" src="img/page/null-04.jpg" alt="" height="530">
+          <img class="null__img img_centered" src="img/page/null-02.jpg" alt="" height="607">
+          <img class="null__img img_centered" src="img/page/null-03.jpg" alt="" height="528" style="margin-bottom: 0;">
+          <img class="null__img img_centered" src="img/page/null-04.jpg" alt="" height="530">
 
-        <p class="null__text text">Для большего понимания рассмотрим другой пример, который часто встречается на практике:</p>
+          <p class="null__text text">Для большего понимания рассмотрим другой пример, который часто встречается на практике:</p>
 
-        <img class="null__img img_centered" src="img/page/null-05.jpg" alt="" height="88">
-        <img class="null__img img_centered" src="img/page/null-06.jpg" alt="" height="475">
+          <img class="null__img img_centered" src="img/page/null-05.jpg" alt="" height="88">
+          <img class="null__img img_centered" src="img/page/null-06.jpg" alt="" height="475">
 
-        <p class="null__text text">Здесь нас интересует отступ между пунктами меню и списком с кнопкой поиска. Отступы между пунктами меню задаются так:</p>
+          <p class="null__text text">Здесь нас интересует отступ между пунктами меню и списком с кнопкой поиска. Отступы между пунктами меню задаются так:</p>
 
-        <img class="null__img img_centered" src="img/page/null-07.jpg" alt="" height="110">
+          <img class="null__img img_centered" src="img/page/null-07.jpg" alt="" height="110">
 
-        <p class="null__text text">Советую использовать псевдоклассы :last-child чаще других, например так:</p>
+          <p class="null__text text">Советую использовать псевдоклассы :last-child чаще других, например так:</p>
 
-        <img class="null__img img_centered" src="img/page/null-08.jpg" alt="" height="383">
+          <img class="null__img img_centered" src="img/page/null-08.jpg" alt="" height="383">
+        </div>
       </section>
-    </div>
   </main>
 
   <footer class="footer">
     <div class="container footer__container">
       <section class="final">
-        <h2 class="final__heading">Подытожим:</h2>
+        <div class="container container_colored">
+          <h2 class="final__heading">Подытожим:</h2>
 
-        <ul class="final__list">
-          <li class="final__item">отступы задаём от предыдущего элемента к следующему</li>
-          <li class="final__item">используем только margin-right и margin-bottom</li>
-          <li class="final__item">внешние отступы задаются только между соседями</li>
-          <li class="final__item">внутренний отступ задаём самому верхнему элементу в дом дереве</li>
-          <li class="final__item">последнему элементу группы отступ всегда обнуляем</li>
-        </ul>
+          <ul class="final__list">
+            <li class="final__item">отступы задаём от предыдущего элемента к следующему</li>
+            <li class="final__item">используем только margin-right и margin-bottom</li>
+            <li class="final__item">внешние отступы задаются только между соседями</li>
+            <li class="final__item">внутренний отступ задаём самому верхнему элементу в дом дереве</li>
+            <li class="final__item">последнему элементу группы отступ всегда обнуляем</li>
+          </ul>
 
-        <p class="final__text text">Конечно бывают исключения. Ведь макеты бывают различной сложности. Иногда базовые принципы приходится нарушать в угоду дизайнерского решения или простоты вёрстки. Но для этого эти принципы необходимо хорошо знать.</p>
+          <p class="final__text text">Конечно бывают исключения. Ведь макеты бывают различной сложности. Иногда базовые принципы приходится нарушать в угоду дизайнерского решения или простоты вёрстки. Но для этого эти принципы необходимо хорошо знать.</p>
+        </div>
       </section>
     </div>
   </footer>
